--- a/index.html
+++ b/index.html
@@ -8,6 +8,16 @@
     <title>Excursion</title>
 </head>
 <body>
-   <h1>Discover hidden places in the world around you</h1> 
+    <h1>Discover hidden places in the world around you</h1> 
+    <p><a href="#">Download Excursion (coming soon!)</a></p>
+    <video src="./resources/videos/excursion.mp4">video not supported</video>
+    <h2>Your personal travel guide</h2>
+    <h3>Excursion remembers places you like, and recommends new points of interest around you.</h3>
+    <img src="./resources/images/camp.webp">
+    <div class="phone">
+        <img src="./resources/images/phone.webp" alt="photo not supported">
+    </div>
+    <h1>Coming Soon for iPhone and Android</h1>
+    <p><a href="#">Download Excursion (coming soon!)</a></p>
 </body>
 </html>
