--- a/index.html
+++ b/index.html
@@ -10,13 +10,13 @@
 <body>
     <h1>Discover hidden places in the world around you</h1> 
     <p><a href="#">Download Excursion (coming soon!)</a></p>
-    <video src="./resources/videos/excursion.mp4">video not supported</video>
+    <video autoplay muted loop>
+        <source src="./resources/videos/excursion.mp4" type="video/mp4">
+    </video>
     <h2>Your personal travel guide</h2>
     <h3>Excursion remembers places you like, and recommends new points of interest around you.</h3>
-    <img src="./resources/images/camp.webp">
-    <div class="phone">
-        <img src="./resources/images/phone.webp" alt="photo not supported">
-    </div>
+    <p><img src="./resources/images/camp.webp"></p>
+    <p><img src="./resources/images/phone.webp" alt="photo not supported"></p>
     <h1>Coming Soon for iPhone and Android</h1>
     <p><a href="#">Download Excursion (coming soon!)</a></p>
 </body>
