--- a/index.html
+++ b/index.html
@@ -19,5 +19,8 @@
     <p><img src="./resources/images/phone.webp" alt="photo not supported"></p>
     <h1>Coming Soon for iPhone and Android</h1>
     <p><a href="#">Download Excursion (coming soon!)</a></p>
+    <footer>
+        <h3>© Excursion</h3>
+    </footer>
 </body>
 </html>
